Major shuffling to push basic material management out into FlightGear/Lib/   so it can be accessible from the scenery tools. Also implimented JIT texture loading to save start time and memory.

--- a/Simulator/Objects/Makefile.am
+++ b/Simulator/Objects/Makefile.am
@@ -1,10 +1,8 @@
 noinst_LIBRARIES = libObjects.a
 
 libObjects_a_SOURCES = \
-	colours.h \
 	fragment.cxx fragment.hxx \
-	material.cxx material.hxx \
-	obj.cxx obj.hxx \
-	texload.c texload.h
+	materialmgr.cxx materialmgr.hxx \
+	obj.cxx obj.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
