Moved material property and texture management back to Simulator/Objects/ Working on scalable texture sizes.

--- a/Simulator/Objects/Makefile.am
+++ b/Simulator/Objects/Makefile.am
@@ -2,7 +2,9 @@ noinst_LIBRARIES = libObjects.a
 
 libObjects_a_SOURCES = \
 	fragment.cxx fragment.hxx \
+	material.cxx material.hxx \
 	materialmgr.cxx materialmgr.hxx \
-	obj.cxx obj.hxx
+	obj.cxx obj.hxx \
+	texload.c texload.h colours.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
