Refinements to the parallelization tools

--- a/Tools/Construct/Array/Makefile.am
+++ b/Tools/Construct/Array/Makefile.am
@@ -2,7 +2,7 @@ noinst_LIBRARIES = libArray.a
 
 libArray_a_SOURCES = array.cxx array.hxx
 
-bin_PROGRAMS = testarray
+noinst_PROGRAMS = testarray
 
 testarray_SOURCES = testarray.cxx
 
