--- a/Simulator/Joystick/Makefile.am
+++ b/Simulator/Joystick/Makefile.am
@@ -1,5 +1,5 @@
-if ENABLE_LINUX_JOYSTICK
-DEFS += -DENABLE_LINUX_JOYSTICK
+if ENABLE_PLIB_JOYSTICK
+DEFS += -DENABLE_PLIB_JOYSTICK
 else
 DEFS += -DENABLE_GLUT_JOYSTICK
 endif
