Use PLIB joystick routines for windows and linux.

--- a/Simulator/Main/Makefile.am
+++ b/Simulator/Main/Makefile.am
@@ -11,8 +11,8 @@ if ENABLE_WIN32_AUDIO
 LIBS += -lwinmm
 endif
 
-if ENABLE_LINUX_JOYSTICK
-DEFS += -DENABLE_LINUX_JOYSTICK
+if ENABLE_PLIB_JOYSTICK
+DEFS += -DENABLE_PLIB_JOYSTICK
 else
 DEFS += -DENABLE_GLUT_JOYSTICK
 endif
