--- a/configure.in
+++ b/configure.in
@@ -51,14 +51,14 @@ if test "x$with_efence" = "xyes" ; then
 fi
 
 dnl specify the compiled flight model
-AC_ARG_WITH(flight-model, [  --with-flight-model=xxx Specify the flight model (navion, cherokee)])
+AC_ARG_WITH(flight-model, [  --with-flight-model=xxx Specify the flight model (navion, c172)])
 
-if test "x$with_flight_model" = "xcherokee" ; then
-    echo "Building with cherokee flight model"
+if test "x$with_flight_model" = "xc172" ; then
+    echo "Building with c172 flight model"
 else 
     echo "Building with navion flight model"
 fi
-AM_CONDITIONAL(ENABLE_CHEROKEE, test "x$with_flight_model" = "xcherokee")
+AM_CONDITIONAL(ENABLE_C172, test "x$with_flight_model" = "xc172")
 
 dnl Let the Win32 user specify if they want to build with the SGI
 dnl opengl.dll as opposed to the more standard openg32.dll
