Tweaks by Oliver.

--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -1,6 +1,5 @@
 noinst_LIBRARIES = libNetwork.a
 
-libNetwork_a_SOURCES = \
-			net_hud.cxx 
+libNetwork_a_SOURCES = net_hud.cxx net_hud.h network.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
