Makefile.am: Got rid of -DUSE_SSG options.cxx: reorder option initializations to match declaration order. views.cxx: much cleanup of stuff that was depricated by the move to ssg.            I now use ssg to do all the projection/modelview matrix calculation            and setup. (mostly) vies.hxx: also added the view pan offset to the view matrix calcs.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -4,7 +4,7 @@ else
 SERIAL_LIBS =
 endif
 
-CPPFLAGS += -DUSE_SSG -DPKGLIBDIR=\"$(pkglibdir)\"
+CPPFLAGS += -DPKGLIBDIR=\"$(pkglibdir)\"
 
 EXTRA_DIST = 3dfx.sh runfgfs.in runfgfs.bat.in
 
