Initial revision of:    geocoord.cxx geocoord.h lowleveltime.cxx lowleveltime.h    mymath.cxx mymath.h timezone.cxx timezone.h Incorporating Durk's better timezone handling:    Makefile.am fg_time.cxx fg_time.hxx

--- a/src/Time/Makefile.am
+++ b/src/Time/Makefile.am
@@ -4,8 +4,12 @@ libTime_a_SOURCES = \
 	event.cxx event.hxx \
 	fg_time.cxx fg_time.hxx \
 	fg_timer.cxx fg_timer.hxx \
+	geocoord.cxx geocoord.h \
 	light.cxx light.hxx \
+	lowleveltime.cxx lowleveltime.h \
+	timezone.cxx timezone.h \
 	moonpos.cxx moonpos.hxx \
+	mymath.cxx mymath.h \
 	sunpos.cxx sunpos.hxx \
 	timestamp.hxx
 
