--- a/src/FDM/JSBSim/Makefile.solo
+++ b/src/FDM/JSBSim/Makefile.solo
@@ -1,7 +1,6 @@
-JSBSim : FGAircraft.o FGAtmosphere.o FGCoefficient.o FGFCS.o FGFDMExec.o \
-	FGModel.o FGOutput.o FGPosition.o FGRotation.o FGState.o \
-	FGTranslation.o FGUtility.o FGEngine.o FGTank.o FGAuxiliary.o \
-	JSBSim.o FGInitialCondition.o
+JSBSim : FGAircraft.o FGAtmosphere.o FGCoefficient.o FGFCS.o FGFDMExec.o\
+      FGModel.o FGOutput.o FGPosition.o FGRotation.o FGState.o FGTranslation.o\
+      FGUtility.o FGEngine.o FGTank.o FGAuxiliary.o JSBSim.o
 	g++ $(CCOPTS) -lm *.o -oJSBSim
 FGAircraft.o : FGAircraft.cpp
 	g++ $(CCOPTS) -c FGAircraft.cpp
