Make sure c172 files get into distribution.

--- a/src/FDM/LaRCsim/Makefile.am
+++ b/src/FDM/LaRCsim/Makefile.am
@@ -1,3 +1,5 @@
+EXTRA_DIST = c172_aero.c c172_engine.c c172_gear.c c172_init.c navion_init.h
+
 if ENABLE_C172
 AIRCRAFT_MODEL = c172_aero.c c172_engine.c c172_gear.c c172_init.c navion_init.h
 else
