--- a/src/Controls/Makefile.am
+++ b/src/Controls/Makefile.am
@@ -2,4 +2,4 @@ noinst_LIBRARIES = libControls.a
 
 libControls_a_SOURCES = controls.cxx controls.hxx
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/Simulator
+INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
