--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -36,6 +36,7 @@ fgfs_LDADD = \
 	$(top_builddir)/Simulator/Cockpit/libCockpit.a \
 	$(top_builddir)/Simulator/Controls/libControls.a \
 	$(top_builddir)/Simulator/FDM/libFlight.a \
+	$(top_builddir)/Simulator/FDM/Balloon/libBalloon.a \
 	$(top_builddir)/Simulator/FDM/External/libExternal.a \
 	$(top_builddir)/Simulator/FDM/JSBsim/libJSBsim.a \
 	$(top_builddir)/Simulator/FDM/LaRCsim/libLaRCsim.a \
