Added Durk's first stab at clouds. Added Simulator/Clouds/ Durk fixed a problem in gui.cxx with cursor type. Durk updated his time zone / time-offset command line parameters Curt added a cheezy fade in/out as we transition through the cloud layer.   We really need to fog the sky dome, sun, moon, stars as well. Curt added --enable/disable-clouds and --clouds-asl= to control clouds.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -45,6 +45,7 @@ fgfs_LDADD = \
 	$(top_builddir)/Simulator/Airports/libAirports.a \
         $(top_builddir)/Simulator/Network/libNetwork.a \
 	$(top_builddir)/Simulator/Objects/libObjects.a \
+	$(top_builddir)/Simulator/Clouds/libClouds.a \
 	$(top_builddir)/Simulator/Time/libTime.a \
 	$(WEATHER_LIBS) \
 	$(top_builddir)/Simulator/Joystick/libJoystick.a \
