Added js_demo.cxx from plib source tree.

--- a/src/Joystick/Makefile.am
+++ b/src/Joystick/Makefile.am
@@ -2,6 +2,10 @@ noinst_LIBRARIES = libJoystick.a
 
 libJoystick_a_SOURCES = joystick.cxx joystick.hxx
 
+noinst_PROGRAMS = js_demo
+
+js_demo_SOURCES = js_demo.cxx
+
 INCLUDES += -I$(top_builddir) \
 	-I$(top_builddir)/Lib \
 	-I$(top_builddir)/Lib/plib/include \
