--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -1,5 +1,12 @@
 noinst_LIBRARIES = libNetwork.a
 
-libNetwork_a_SOURCES = net_hud.cxx network.cxx network.h
+libNetwork_a_SOURCES = \
+	iochannel.cxx iochannel.hxx \
+	fg_file.cxx fg_file.hxx \
+	fg_serial.cxx fg_serial.hxx \
+	protocol.cxx protocol.hxx \
+	garmin.cxx garmin.hxx \
+	nmea.cxx nmea.hxx \
+	net_hud.cxx network.cxx network.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
