Revamped the "External" flight model.

--- a/src/FDM/Makefile.am
+++ b/src/FDM/Makefile.am
@@ -1,9 +1,10 @@
-SUBDIRS	= Balloon External JSBsim LaRCsim
+SUBDIRS	= Balloon JSBsim LaRCsim
 
 noinst_LIBRARIES = libFlight.a
 
 libFlight_a_SOURCES = \
 	Balloon.cxx Balloon.h \
+	External.cxx External.hxx \
 	flight.cxx flight.hxx \
 	JSBsim.cxx JSBsim.hxx \
 	LaRCsim.cxx LaRCsim.hxx \
