Moved Oliver's multi-pilot network code to NetworkOLK/

--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -10,7 +10,6 @@ libNetwork_a_SOURCES = \
 	garmin.cxx garmin.hxx \
 	nmea.cxx nmea.hxx \
 	pve.cxx pve.hxx \
-	rul.cxx rul.hxx \
-	net_hud.cxx network.cxx network.h
+	rul.cxx rul.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
