--- a/src/NetworkOLK/Tools/Makefile
+++ b/src/NetworkOLK/Tools/Makefile
@@ -2,12 +2,15 @@ CPPFLAGS	=
 CFLAGS		=
 CC		= gcc
 RM		= rm
-PROGS		= fgd fgd_scan fgd_com
+PROGS		= fgd fgd_scan fgd_com fgd_mcp fgd_verbose
 BINDIR		= /usr/local/bin
 
 all: $(PROGS)
 
 fgd:      fgd.c
+	  $(CC) -o $@ $^
+
+fgd_verbose: fgd_verbose.c
 	  $(CC) -o $@ $^
 
 fgd_scan: fgd_scan.c
@@ -16,15 +19,14 @@ fgd_scan: fgd_scan.c
 fgd_com:  fgd_com.c
 	  $(CC) -o $@ $^
 
+fgd_mcp:  fgd_mcp.c
+	  $(CC) -o $@ $^
+
 clean:
 	-$(RM) -f *.o $(PROGS) *~ core
 
-install: all devs
-	install -d $(BINDIR)
+install: all
 	install $(PROGS) $(BINDIR)
-	install -d $(MANDIR)/man4
-	install -m 644 js.4 $(MANDIR)/man4
 	
 dist:	clean
 	tar czf ../`basename \`pwd\``.tar.gz -C .. `basename \`pwd\``
-
