--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -66,7 +66,7 @@ fgfs_LDADD = \
 	$(top_builddir)/Lib/Math/libMath.a \
 	$(top_builddir)/Lib/Bucket/libBucket.a \
 	$(top_builddir)/Lib/Debug/libDebug.a \
-	-lpu -lfnt -lssg -lsg \
+	-lplibpu -lplibfnt -lplibssg -lplibsg \
 	$(top_builddir)/Lib/Misc/libMisc.a \
 	$(top_builddir)/Lib/zlib/libz.a \
 	$(opengl_LIBS) \
