Separating out the Sky rendering as a separate unit and ssg-ifying it.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,6 +25,7 @@ SUBDIRS = \
         $(NETWORK_DIRS) \
         Objects \
         Scenery \
+	Sky \
         Time \
         $(WEATHER_DIR) \
         Main
