UIUC flight model contribution.  This is based on LaRCsim, but can read the aircraft parameters from a file.  It still uses Tony's <crappy> (and I mean that in a constructive way) gear model. :-)

--- a/src/FDM/LaRCsim/Makefile.am
+++ b/src/FDM/LaRCsim/Makefile.am
@@ -3,12 +3,26 @@ EXTRA_DIST = \
 	c172_engine.c \
 	c172_gear.c \
 	c172_init.c \
-	navion_init.h
+	navion_init.h \
+	uiuc_aero.c
+
+if ENABLE_NAVION
+NAVION_MODEL = \
+	navion_aero.c navion_engine.c navion_gear.c navion_init.c navion_init.h
+else
+NAVION_MODEL =
+endif
 
 if ENABLE_C172
-AIRCRAFT_MODEL = c172_aero.c c172_engine.c c172_gear.c c172_init.c navion_init.h
+C172_MODEL = c172_aero.c c172_engine.c c172_gear.c c172_init.c navion_init.h
 else
-AIRCRAFT_MODEL = navion_aero.c navion_engine.c navion_gear.c navion_init.c navion_init.h
+C172_MODEL =
+endif
+
+if ENABLE_UIUC
+UIUC_MODEL = uiuc_aero.c c172_init.c navion_init.h
+else
+UIUC_MODEL =
 endif
 
 # AIRCRAFT_MODEL = cherokee_aero.c cherokee_engine.c cherokee_gear.c cherokee_init.c navion_init.h
@@ -29,7 +43,7 @@ libLaRCsim_a_SOURCES = \
 	ls_sim_control.h \
         ls_step.c ls_step.h \
 	ls_sym.h ls_types.h \
-	$(AIRCRAFT_MODEL) \
+	$(NAVION_MODEL) $(C172_MODEL) $(UIUC_MODEL) \
 	ls_interface.c ls_interface.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
