--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,7 @@ fgfs-base: fgfs-base-tar fgfs-base-zip
 
 fgfs-base-tar:
 	(cd $(HOME); \
-	tar czvf fgfs-base-$(VERSION).tar.gz \
+	tar czvf fgfs-base-$(VERSION)c.tar.gz \
 	FlightGear/[A-CE-R]* \
 	FlightGear/Scenery/w120n30/w111n33 \
 	FlightGear/Sounds \
@@ -32,12 +32,20 @@ fgfs-base-tar:
 
 fgfs-base-zip:
 	(cd $(HOME); \
-	zip -ryv fgfs-base-$(VERSION).zip \
+	zip -ryv fgfs-base-$(VERSION)c.zip \
 	FlightGear/[A-CE-R]* \
 	FlightGear/Scenery/w120n30/w111n33 \
 	FlightGear/Sounds \
 	FlightGear/Textures FlightGear/Thanks \
 	FlightGear/[T-W]* FlightGear/[c-z]*)
+
+fgfs-base-patch:
+	(cd $(HOME); \
+	tar --newer 2/17/2000 -czvf fgfs-base-patch-$(VERSION)c.tar.gz \
+	FlightGear/[A-CE-R]* \
+	FlightGear/Scenery/w120n30/w111n33 \
+	FlightGear/Sounds \
+	FlightGear/[T-W]* FlightGear/[c-m]*)
 
 # make the mini JSBsim data distribution
 jsbsim-data:
