Updated for magvar calculations.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -66,7 +66,7 @@ fgfs_LDADD = \
 	$(top_builddir)/src/Sky/libSky.a \
 	$(top_builddir)/src/Joystick/libJoystick.a \
 	$(SERIAL_LIBS) \
-	-lsgscreen -lsgmath -lsgbucket -lsgdebug -lsgmisc \
+	-lsgscreen -lsgmath -lsgbucket -lsgdebug -lsgmagvar -lsgmisc \
 	-lplibpu -lplibfnt -lplibssg -lplibsg \
 	-lz \
 	$(opengl_LIBS) \
