--- a/src/FDM/LaRCsim/Makefile.am
+++ b/src/FDM/LaRCsim/Makefile.am
@@ -6,26 +6,11 @@ EXTRA_DIST = \
 	navion_init.h \
 	uiuc_aero.c
 
-if ENABLE_NAVION
-NAVION_MODEL = \
-	navion_aero.c navion_engine.c navion_gear.c navion_init.c navion_init.h
-else
-NAVION_MODEL =
-endif
-
-if ENABLE_C172
-C172_MODEL = c172_aero.c c172_engine.c c172_gear.c c172_init.c navion_init.h
-else
-C172_MODEL =
-endif
-
-if ENABLE_UIUC
-UIUC_MODEL = uiuc_aero.c c172_init.c navion_init.h
-else
-UIUC_MODEL =
-endif
-
-# AIRCRAFT_MODEL = cherokee_aero.c cherokee_engine.c cherokee_gear.c cherokee_init.c navion_init.h
+AIRCRAFT_MODEL =  c172_aero.c c172_engine.c c172_gear.c c172_init.c \
+                  navion_init.h  navion_aero.c navion_engine.c \
+                  navion_gear.c navion_init.c uiuc_aero.c \
+                  cherokee_aero.c cherokee_engine.c cherokee_gear.c \
+                  cherokee_init.c
 
 noinst_LIBRARIES = libLaRCsim.a
 
@@ -43,7 +28,7 @@ libLaRCsim_a_SOURCES = \
 	ls_sim_control.h \
         ls_step.c ls_step.h \
 	ls_sym.h ls_types.h \
-	$(NAVION_MODEL) $(C172_MODEL) $(UIUC_MODEL) \
+	$(AIRCRAFT_MODEL) \
 	ls_interface.c ls_interface.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
