Added all .h files to Makefile.am so they can be included in the distribution.

--- a/src/FDM/UIUCModel/Makefile.am
+++ b/src/FDM/UIUCModel/Makefile.am
@@ -2,24 +2,40 @@
 noinst_LIBRARIES = libUIUCModel.a
 
 libUIUCModel_a_SOURCES = \
+                        uiuc_1DdataFileReader.h \
                         uiuc_1DdataFileReader.cpp \
                         uiuc_1Dinterpolation.cpp \
+                        uiuc_2DdataFileReader.h \
                         uiuc_2DdataFileReader.cpp \
+                        uiuc_2Dinterpolation.h \
                         uiuc_2Dinterpolation.cpp \
+                        uiuc_aerodeflections.h \
                         uiuc_aerodeflections.cpp \
+			uiuc_aircraft.h \
+			uiuc_aircraftdir.h \
+                        uiuc_coefficients.h \
                         uiuc_coefficients.cpp \
+                        uiuc_convert.h \
                         uiuc_convert.cpp \
+                        uiuc_engine.h\
                         uiuc_engine.cpp\
+                        uiuc_ice.h \
                         uiuc_ice.cpp \
+                        uiuc_initializemaps.h \
                         uiuc_initializemaps.cpp \
                         uiuc_initializemaps1.cpp \
                         uiuc_initializemaps2.cpp \
                         uiuc_initializemaps3.cpp \
                         uiuc_initializemaps4.cpp \
+                        uiuc_menu.h \
                         uiuc_menu.cpp \
+                        uiuc_parsefile.h \
                         uiuc_parsefile.cpp \
+                        uiuc_recorder.h \
                         uiuc_recorder.cpp \
+                        uiuc_warnings_errors.h \
                         uiuc_warnings_errors.cpp \
-                        uiuc_wrapper.cpp 
+			uiuc_wrapper.h \ 
+			uiuc_wrapper.cpp 
 
 INCLUDES += -I$(top_builddir)
