Updates to add in navaid management code.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,6 +22,7 @@ SUBDIRS = \
         FDM \
         GUI \
         Joystick \
+	Navaids \
         $(NETWORK_DIRS) \
         Objects \
         Scenery \
