Basic query routine now working.

--- a/src/Navaids/Makefile.am
+++ b/src/Navaids/Makefile.am
@@ -5,6 +5,6 @@ noinst_PROGRAMS = testnavs
 libNavAids_a_SOURCES = navaid.hxx navaids.hxx navaids.cxx
 
 testnavs_SOURCES = testnavs.cxx
-testnavs_LDADD = libNavAids.a -lsgdebug -lsgmisc -lz
+testnavs_LDADD = libNavAids.a -lsgdebug -lsgmath -lsgmisc -lz
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
