--- a/src/Navaids/Makefile.am
+++ b/src/Navaids/Makefile.am
@@ -2,7 +2,9 @@ noinst_LIBRARIES = libNavAids.a
 
 noinst_PROGRAMS = testnavs
 
-libNavAids_a_SOURCES = nav.hxx navlist.hxx navlist.cxx
+libNavAids_a_SOURCES = \
+	ils.hxx ilslist.hxx ilslist.cxx \
+	nav.hxx navlist.hxx navlist.cxx
 
 testnavs_SOURCES = testnavs.cxx
 testnavs_LDADD = libNavAids.a -lsgdebug -lsgmath -lsgmisc -lz
