Updated JSBsim code.

--- a/src/FDM/JSBSim/Makefile.am
+++ b/src/FDM/JSBSim/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS = filtersjb
+
 EXTRA_DIST = JSBSim.cpp Makefile.solo
 
 noinst_LIBRARIES = libJSBsim.a
@@ -6,11 +8,14 @@ libJSBsim_a_SOURCES = FGAircraft.cpp FGAircraft.h \
 	FGAtmosphere.cpp FGAtmosphere.h \
 	FGAuxiliary.cpp FGAuxiliary.h \
 	FGCoefficient.cpp FGCoefficient.h \
+	FGConfigFile.cpp FGConfigFile.h \
+	FGControls.cpp FGControls.h \
 	FGDefs.h \
 	FGFCS.cpp FGFCS.h \
 	FGFDMExec.cpp FGFDMExec.h \
 	FGInitialCondition.cpp FGInitialCondition.h \
 	FGLGear.cpp FGLGear.h \
+	FGMatrix.cpp FGMatrix.h \
 	FGModel.cpp FGModel.h \
 	FGOutput.cpp FGOutput.h \
 	FGPosition.cpp FGPosition.h \
@@ -26,8 +31,8 @@ noinst_PROGRAMS = testJSBsim
 
 testJSBsim_SOURCES = JSBSim.cpp
 
-testJSBsim_LDADD = libJSBsim.a
+testJSBsim_LDADD = libJSBsim.a filtersjb/libfiltersjb.a
 
-INCLUDES += -I$(top_builddir)
+INCLUDES += -I$(top_builddir)/src
 
 DEFS += -DFGFS
