--- a/src/Include/config.h.in
+++ b/src/Include/config.h.in
@@ -72,6 +72,9 @@
 /* Define if you have the vprintf function.  */
 #undef HAVE_VPRINTF
 
+/* Define if you have gdbm installed system wide.  */
+#undef HAVE_GDBM
+
 /* Define if you have zlib installed system wide.  */
 #undef HAVE_ZLIB
 
