Autopilot "class-ification". Separated out gui parts of autopilot control from the actual autopilot code.

--- a/src/Autopilot/Makefile.am
+++ b/src/Autopilot/Makefile.am
@@ -1,5 +1,7 @@
 noinst_LIBRARIES = libAutopilot.a
 
-libAutopilot_a_SOURCES = autopilot.cxx autopilot.hxx
+libAutopilot_a_SOURCES = \
+	auto_gui.cxx auto_gui.hxx \
+	newauto.cxx newauto.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
