--- a/src/NetworkOLK/Makefile.am
+++ b/src/NetworkOLK/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libNetworkOLK.a
 
 libNetworkOLK_a_SOURCES = \
-	net_send.cxx net_hud.cxx network.cxx network.h fgd.h
+	net_send.cxx net_hud.cxx network.cxx network.h fgd.h \
+	features.cxx features.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
