Replaced gdbm with metakit.  Involves a new simgear version and a new database format for the airports in the base package.

--- a/src/Airports/Makefile.am
+++ b/src/Airports/Makefile.am
@@ -8,6 +8,6 @@ libAirports_a_SOURCES = \
 
 buildsimple_SOURCES = buildsimple.cxx
 
-buildsimple_LDADD = libAirports.a -lsgdebug -lsgmisc -lgdbm -lz
+buildsimple_LDADD = libAirports.a -lsgdebug -lsgmisc -lmk4 -lz
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
