--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -70,7 +70,7 @@ fgfs_LDADD = \
 	$(SERIAL_LIBS) \
 	-lsgscreen -lsgmath -lsgbucket -lsgdebug -lsgmagvar -lsgmisc \
 	-lplibpu -lplibfnt -lplibssg -lplibsg \
-	-lgdbm -lz \
+	-lmk4 -lz \
 	$(opengl_LIBS) \
 	$(audio_LIBS)
 
