Alex Perry has added support for Ray Woodworth's motion chair which has 3-5 axes installed.

--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -10,6 +10,7 @@ libNetwork_a_SOURCES = \
 	garmin.cxx garmin.hxx \
 	nmea.cxx nmea.hxx \
 	pve.cxx pve.hxx \
+	ray.cxx ray.hxx \
 	rul.cxx rul.hxx \
 	joyclient.cxx joyclient.hxx
 
