Updates, optimizations, and restructures from Norman Vine.

--- a/src/Scenery/Makefile.am
+++ b/src/Scenery/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libScenery.a
 
 libScenery_a_SOURCES = \
+	hitlist.cxx hitlist.hxx \
 	scenery.cxx scenery.hxx \
 	tilecache.cxx tilecache.hxx \
 	tileentry.cxx tileentry.hxx \
