--- a/src/Include/config.h.in
+++ b/src/Include/config.h.in
@@ -72,8 +72,8 @@
 /* Define if you have the vprintf function.  */
 #undef HAVE_VPRINTF
 
-/* Define if you have gdbm installed system wide.  */
-#undef HAVE_GDBM
+/* Define if you have MetaKit installed system wide.  */
+#undef HAVE_MK4
 
 /* Define if you have zlib installed system wide.  */
 #undef HAVE_ZLIB
