--- a/src/Time/Makefile.am
+++ b/src/Time/Makefile.am
@@ -2,14 +2,15 @@ noinst_LIBRARIES = libTime.a
 
 libTime_a_SOURCES = \
 	event.cxx event.hxx \
-	fg_time.cxx fg_time.hxx \
 	fg_timer.cxx fg_timer.hxx \
-	geocoord.cxx geocoord.h \
 	light.cxx light.hxx \
-	lowleveltime.cxx lowleveltime.h \
-	timezone.cxx timezone.h \
 	moonpos.cxx moonpos.hxx \
 	sunpos.cxx sunpos.hxx \
-	timestamp.hxx
+	timestamp.hxx \
+	tmp.cxx tmp.hxx
+	# fg_time.cxx fg_time.hxx \
+	# geocoord.cxx geocoord.h \
+	# lowleveltime.cxx lowleveltime.h \
+	# timezone.cxx timezone.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
